<resources>
    <string name="long_shortcut">Go To Home</string>
    <string name="short_shortcut">Home</string>
    <string name="long_shortcut2">Search</string>
    <string name="short_shortcut2">Search</string>
    <string name="long_shortcut3">About</string>
    <string name="short_shortcut3">About</string>
    <string name="long_shortcut4">Go To Blogs</string>
    <string name="short_shortcut4">Blogs</string>
    <string name="facebook_app_id" translatable="false">2027882067320201</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2027882067320201</string>
    <string name="stripe_publish_key" translatable="false">pk_test_RjJFXdLkbesQpjm6T2xPddmp</string>
    <string name="admob_banner_ads_key" translatable="false">ca-app-pub-9530431913684433/8457533462</string>
    <string name="admob_banner_ads_key2" translatable="false">ca-app-pub-9530431913684433/9653606196</string>
    <string name="adview_publisher_key" translatable="false">pub-9530431913684433</string>
    <string name="terms_and_conditions__title">Terms And Conditions</string>
    <string name="refund_policy__title">Refund Policy</string>
    <string name="history__title">History</string>
    <string name="title__activity_user_history_list">UserHistoryListActivity</string>
    <string name="favourite__title">Favourites</string>
    <string name="fb_register__welcome">Welcome from %1$s </string>
    <string name="fb_register__desc">Please login to use all features of application.</string>
    <string name="gallery__title">Gallery</string>
    <string name="gallery_image__gallery">Image Gallery</string>
    <string name="gallery_img__desc">Image Description</string>
    <string name="image_default__image">Default Image</string>
    <string name="app__app_name">Ashtrixx</string>
    <string name="app__ok">OK</string>
    <string name="app__cancel">CANCEL</string>
    <string name="app__drawer_open">Drawer Open</string>
    <string name="app__drawer_close">Drawer Close</string>
    <string name="menu__fb_login">Facebook Login</string>
    <string name="menu__comment_list">Comment List</string>
    <string name="menu__notification_list">Notification List</string>
    <string name="register__user_name">User Name</string>
    <string name="register__email">Email</string>
    <string name="register__password">Password</string>
    <string name="register__back_to_login">Already member ? Login</string>
    <string name="register__register">Register</string>
    <string name="register__new_account">Register New User Account</string>
    <string name="register__check_option">Do you accept this privacy and policy?</string>
    <string name="forgot_password__title">Forgot Password</string>
    <string name="forgot_password__email">Email</string>
    <string name="forgot_password__back_to_login">Already member ? Login</string>
    <string name="forgot_password__password_recovery">Password Recovery</string>
    <string name="forgot_password__save">Save</string>
    <string name="forgot_password__send">Send</string>
    <string name="password_change__password">Password</string>
    <string name="password_change__save">Save</string>
    <string name="password_change__confirm_password">Confirm Password</string>
    <string name="password_change__password_change">Password Change</string>
    <string name="login__email">Email</string>
    <string name="login__password">Password</string>
    <string name="login__not_a_member_join_now">New here? Sign Up</string>
    <string name="login__forgot_your_password">Forgot password ?</string>
    <string name="login__login">SignIn</string>
    <string name="login__welcome_title">Welcome To Ashtrixx</string>
    <string name="login__choice_text">OR</string>
    <string name="contact_us__name">Contact Name</string>
    <string name="contact_us__email">Contact Email</string>
    <string name="contact_us__message">Contact Message</string>
    <string name="contact_us__phone">Contact Phone</string>
    <string name="contact_us__submit">Submit</string>
    <string name="notification_setting__on_off">Notification Setting ( On/Off )</string>
    <string name="notification_setting__latest_message_from_system">Latest Message From System</string>
    <string name="notification__notification">Notification!</string>
    <string name="notification__title">Notification</string>
    <string name="notification_setting__title">Notification Setting</string>
    <string name="notification_detail__title">Notification Detail</string>
    <string name="notification__alert">Alert</string>
    <string name="language__english">English</string>
    <string name="language__arabic">Arabic</string>
    <string name="language__spanish">Spanish</string>
    <string name="language__language_change">Are you sure you want to change to %1$s?</string>
    <string name="language__title">Language</string>
    <string name="comment__replies">-- %1$s replies</string>
    <string name="comment__dates">-- %1$s </string>
    <string name="comment__title">Comment List</string>
    <string name="comment__detail_title">Comment Replies</string>
    <string name="comment__empty_comment">Comment is Empty.</string>
    <string name="comment__comment">Comment</string>
    <string name="basket__list">Basket List</string>
    <string name="basket__no_item_title">Cart is Empty</string>
    <string name="basket__total">Total</string>
    <string name="basket__items">Items</string>
    <string name="basket__checkout">Checkout</string>
    <string name="basket__no_item_desc">Look like you have no items in your shopping cart. Please continue shopping.</string>
    <string name="basket__attributes">Attributes</string>
    <string name="rating__list">Rating List</string>
    <string name="rating__write_review">Write Review</string>
    <string name="rating__total_count">%1$s Customer Reviews</string>
    <string name="rating__total_value">%1$s out of 5 stars</string>
    <string name="rating__total_count_n_value">%1$s out of 5 stars (%2$s Reviews)</string>
    <string name="rating__count">%1$s star</string>
    <string name="rating__percent">%1$s %%</string>
    <string name="rating__in_stock">In Stock</string>
    <string name="rating__title">Title</string>
    <string name="rating__message">Message</string>
    <string name="rating__user_rating">User Rating Entry !</string>
    <string name="rating__your_rating">Your Rating</string>
    <string name="rating__five_star">5 star</string>
    <string name="rating__four_star">4 star</string>
    <string name="rating__three_star">3 star</string>
    <string name="rating__two_star">2 star</string>
    <string name="rating__one_star">1 star</string>
    <string name="rating__rating_range">Rating Range</string>
    <string name="rating__one">1 and higher</string>
    <string name="rating__two">2 and higher</string>
    <string name="rating__three">3 and higher</string>
    <string name="rating__four">4 and higher</string>
    <string name="rating__five">5 \n</string>
    <string name="rating__comar">","</string>
    <string name="basket_card_view__price">Price</string>
    <string name="basket_card_view__sub_total">Sub Total</string>
    <string name="basket_card_view__default_count">0</string>
    <string name="dialog__title_m_mun">Sort</string>
    <string name="popular__m_mun">Popular</string>
    <string name="recent__m_mun">Latest</string>
    <string name="low_price__m_mun">Lowest Price</string>
    <string name="high_price__m_mun">Highest Price</string>
    <string name="checkout__payment_method">Payment method</string>
    <string name="checkout__cash_on_delivery">Cash On Delivery</string>
    <string name="checkout__bank">Paypal</string>
    <string name="checkout__other">Stripe</string>
    <string name="checkout__memo">Memo</string>
    <string name="checkout__information__COD">You just need to do cash payment when a purchase or shipment is delivered.</string>
    <string name="checkout__information__PAYPAL" />
    <string name="checkout__information__STRIPE" />
    <string name="checkout__no_payment_method">No Payment Method Available</string>
    <string name="checkout__choose_a_method">You need to choose a payment method</string>
    <string name="checkout__stripe">Pay with Stripe</string>
    <string name="checkout__bank_transfer">Bank</string>
    <string name="checkout__order_registered">Order Successfully Done</string>
    <string name="checkout__shipping_to">Shipping Address </string>
    <string name="checkout__view_detail">View Detail</string>
    <string name="checkout__placed">Your order has been placed.</string>
    <string name="checkout__address_name">Address :</string>
    <string name="checkout__phone_name">Phone :</string>
    <string name="checkout__email_name">Email :</string>
    <string name="checkout__dash">-</string>
    <string name="checkout__claim">Claim</string>
    <string name="transaction__number">Transaction No :</string>
    <string name="transaction__statue">Status :</string>
    <string name="transaction__total_amount">Total Amount :</string>
    <string name="transaction__view_details">View Details</string>
    <string name="transaction__title">Transaction List</string>
    <string name="transaction_detail__title">Transaction Detail</string>
    <string name="checkout_detail__totalItem">Total Item</string>
    <string name="checkout_detail__totalSubtotal">Subtotal</string>
    <string name="checkout_detail__totalDiscount">Discount Amount</string>
    <string name="checkout_detail__totalBalance">Balance</string>
    <string name="checkout_detail__claimed_coupon">You just claimed the coupon</string>
    <string name="edit_setting__notification_setting">Notification Setting</string>
    <string name="edit_setting__edit_profile">Edit Profile</string>
    <string name="edit_setting__logout">Logout</string>
    <string name="edit_setting__logout_question">Are you sure to logout ? </string>
    <string name="edit_setting__terms_and_conditions">Terms and Conditions</string>
    <string name="edit_setting__app_info">App Info</string>
    <string name="edit_setting__title">Setting</string>
    <string name="transaction_order__total_amount">Price</string>
    <string name="transaction_order__count">Quantity</string>
    <string name="transaction_order__balance">Balance</string>
    <string name="transaction_order__discount_available_amount">Discount Available Amount</string>
    <string name="transaction_order__sub_total">Sub Total</string>
    <string name="message__register_success">Successfully Register.</string>
    <string name="message__loading">Loading…</string>
    <string name="message__please_wait">Please wait…</string>
    <string name="message__welcome">Welcome form Ashtrixx</string>
    <string name="message__want_to_quit">Do you really want to quit?</string>
    <string name="message__ok_close">OK</string>
    <string name="message__cancel_close">Cancel</string>
    <string name="checkout__checkout">Checkout</string>
    <string name="menu__home">Home</string>
    <string name="menu__profile">Profile</string>
    <string name="menu__favourite_items">Favourite</string>
    <string name="menu__transaction">Transaction</string>
    <string name="menu__user_history">User History</string>
    <string name="menu__logout">Logout</string>
    <string name="menu__contact_us">Contact Us</string>
    <string name="menu__language">Language</string>
    <string name="menu__setting">Settings</string>
    <string name="menu__app_setting">App</string>
    <string name="menu__user_info">User Info</string>
    <string name="menu__latest_product">Latest Products</string>
    <string name="menu__discount">Discount Products</string>
    <string name="menu__category">Category</string>
    <string name="menu__featured_product">Featured Products</string>
    <string name="menu__trending_products">Trending Products</string>
    <string name="menu__collections">Collections</string>
    <string name="menu__rate">Rate this app</string>
</resources>