<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_before_login"
        android:checkableBehavior="single">

        <item android:title="@string/menu__home">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_home"
                        android:icon="@drawable/ic_outline_home_24"
                        android:title="@string/menu__home" />

                    <item
                        android:id="@+id/nav_category"
                        android:icon="@drawable/ic_outline_category_24"
                        android:title="@string/menu__category" />

                    <item
                        android:id="@+id/nav_latest_product"
                        android:icon="@drawable/ic_outline_trending_up_24"
                        android:title="@string/menu__latest_product" />

                    <item
                        android:id="@+id/nav_discount_product"
                        android:icon="@drawable/baseline_discount_grey_24"
                        android:visible="false"
                        android:title="@string/menu__discount" />

                    <item
                        android:id="@+id/nav_feature_product"
                        android:visible="false"
                        android:icon="@drawable/baseline_featured_grey_24"
                        android:title="@string/menu__featured_product" />

                    <item
                        android:id="@+id/nav_trending_products"
                        android:visible="false"
                        android:icon="@drawable/baseline_trending_grey_24"
                        android:title="@string/menu__trending_products" />

                    <item
                        android:id="@+id/nav_productCollectionHeaderList"
                        android:visible="true"
                        android:icon="@drawable/ic_outline_view_list_24"
                        android:title="@string/menu__collections" />

                    <item
                        android:id="@+id/nav_danceoholics"
                        android:icon="@drawable/ic_outline_fiber_new_24"
                        android:title="Danceoholics" />



                </group>
            </menu>

        </item>


        <item android:title="@string/menu__user_info">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_profile"
                        android:icon="@drawable/ic_outline_person_outline_24"
                        android:title="@string/menu__profile" />


                </group>
            </menu>

        </item>

        <item android:title="@string/menu__app_setting">
            <menu>
                <group android:checkableBehavior="single">

                    <!--<item-->
                        <!--android:id="@+id/nav_about_us"-->
                        <!--android:icon="@drawable/ic_about_us"-->
                        <!--android:title="@string/menu__about_app" />-->

                    <!--<item-->
                        <!--android:id="@+id/nav_contact_us"-->
                        <!--android:icon="@drawable/ic_contact_us"-->
                        <!--android:title="@string/menu__contact_us" />-->

                    <!--<item-->
                        <!--android:id="@+id/nav_noti"-->
                        <!--android:icon="@drawable/baseline_noti_white_24"-->
                        <!--android:title="@string/menu__notification_setting" />-->

                    <item
                        android:id="@+id/nav_language"
                        android:visible="false"
                        android:icon="@drawable/baseline_language_24"
                        android:title="@string/menu__language" />

                    <item
                        android:id="@+id/nav_report"
                        android:icon="@drawable/ic_outline_bug_report_24"
                        android:title="Report" />

                    <item
                        android:id="@+id/nav_setting"
                        android:icon="@drawable/ic_outline_settings_24"
                        android:title="@string/menu__setting" />


                    <item
                        android:id="@+id/nav_contact_us"
                        android:icon="@drawable/ic_outline_alternate_email_24"
                        android:title="@string/menu__contact_us" />

                    <item
                        android:id="@+id/nav_rate_this_app"
                        android:icon="@drawable/ic_outline_rate_review_24"
                        android:title="@string/menu__rate" />

                    <item
                        android:id="@+id/nav_privacy_policy"
                        android:visible="false"
                        android:icon="@drawable/baseline_info_white_24"
                        android:title="@string/terms_and_conditions__title" />



                </group>
            </menu>

        </item>

    </group>

    <group
        android:id="@+id/group_after_login"
        android:checkableBehavior="single"
        android:visible="false">

        <item android:title="@string/menu__home">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_home_login"
                        android:icon="@drawable/ic_outline_home_24"
                        android:title="@string/menu__home" />

                    <item
                        android:id="@+id/nav_category_login"
                        android:icon="@drawable/ic_outline_category_24"
                        android:title="@string/menu__category" />

                    <item
                        android:id="@+id/nav_latest_product_login"
                        android:icon="@drawable/ic_outline_trending_up_24"
                        android:title="@string/menu__latest_product" />

                    <item
                        android:id="@+id/nav_discount_product_login"
                        android:visible="false"
                        android:icon="@drawable/baseline_discount_grey_24"
                        android:title="@string/menu__discount" />

                    <item
                        android:id="@+id/nav_feature_product_login"
                        android:visible="false"
                        android:icon="@drawable/baseline_featured_grey_24"
                        android:title="@string/menu__featured_product" />

                    <item
                        android:id="@+id/nav_trending_products_login"
                        android:visible="false"
                        android:icon="@drawable/baseline_trending_grey_24"
                        android:title="@string/menu__trending_products" />

                    <item
                        android:id="@+id/nav_productCollectionHeaderList_login"
                        android:visible="true"
                        android:icon="@drawable/ic_outline_view_list_24"
                        android:title="@string/menu__collections" />


                    <item
                        android:id="@+id/nav_profile_danceoholics"
                        android:icon="@drawable/ic_outline_fiber_new_24"
                        android:title="Danceoholics"
                        tools:ignore="DuplicateIds" />

                </group>

            </menu>

        </item>

        <item android:title="@string/menu__user_info">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_profile_login"
                        android:icon="@drawable/ic_outline_person_outline_24"
                        android:title="@string/menu__profile" />

                    <!--<item-->
                        <!--android:id="@+id/nav_like_login"-->
                        <!--android:icon="@drawable/baseline_menu_like_grey_24"-->
                        <!--android:title="@string/menu__like" />-->

                    <item
                        android:id="@+id/nav_favourite_news_login"
                        android:iconTint="@color/md_white_1000"
                        android:icon="@drawable/ic_baseline_favorite_border_24"
                        android:title="@string/menu__favourite_items" />

                    <item
                        android:id="@+id/nav_transaction_login"
                        android:visible="false"
                        android:icon="@drawable/baseline_menu_transcation_24"
                        android:title="@string/menu__transaction" />

                    <item
                        android:id="@+id/nav_user_history_login"
                        android:visible="false"
                        android:icon="@drawable/baseline_menu_history_grey_24"
                        android:title="@string/menu__user_history" />

                    <item
                        android:id="@+id/nav_logout_login"
                        android:icon="@drawable/ic_outline_exit_to_app_24"
                        android:title="@string/menu__logout" />

                </group>
            </menu>

        </item>

        <item android:title="@string/menu__app_setting">
            <menu>
                <group android:checkableBehavior="single">

                    <!--<item-->
                        <!--android:id="@+id/nav_about_us_login"-->
                        <!--android:icon="@drawable/ic_about_us"-->
                        <!--android:title="@string/menu__about_app" />-->

                    <!--<item-->
                        <!--android:id="@+id/nav_contact_us_login"-->
                        <!--android:icon="@drawable/ic_contact_us"-->
                        <!--android:title="@string/menu__contact_us" />-->

                    <!--<item-->
                        <!--android:id="@+id/nav_noti_login"-->
                        <!--android:icon="@drawable/baseline_noti_white_24"-->
                        <!--android:title="@string/menu__notification_setting" />-->

                    <item
                        android:id="@+id/nav_language_login"
                        android:visible="false"
                        android:icon="@drawable/baseline_language_24"
                        android:title="@string/menu__language" />

                    <item
                        android:id="@+id/nav_report_login"
                        android:icon="@drawable/ic_outline_bug_report_24"
                        android:title="Report" />

                    <item
                        android:id="@+id/nav_setting_login"
                        android:icon="@drawable/ic_outline_settings_24"
                        android:title="@string/menu__setting" />

                    <item
                        android:id="@+id/nav_contact_us_login"
                        android:icon="@drawable/ic_outline_alternate_email_24"
                        android:title="@string/menu__contact_us" />

                    <item
                        android:id="@+id/nav_privacy_policy_login"
                        android:visible="false"
                        android:icon="@drawable/baseline_info_white_24"
                        android:title="@string/terms_and_conditions__title" />
                    <item
                        android:id="@+id/nav_rate_this_app_login"
                        android:icon="@drawable/ic_outline_rate_review_24"
                        android:title="@string/menu__rate" />



                </group>
            </menu>

        </item>
    </group>

</menu>
