<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:iconTint="#FF2B68"
        android:icon="@drawable/ic_shome"
        android:shortcutId="shortcut_mainhome"
        android:shortcutShortLabel="@string/short_shortcut"
        android:shortcutLongLabel="@string/long_shortcut"
        >
        <!-- Each one of these intents needs an android:action, even if you don't
             do anything with it. Otherwise you're in for a crash! -->
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.dewonderstruck.apps.MainActivity"
            android:targetPackage="com.dewonderstruck.apps.ashx0"/>
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list is what the user sees when they
             launch this shortcut. The previous intents will be put on the backstack -->
        <!-- You can also specify the category of the shortcut via the <categories>
             tag. As of this writing, the only supported category is
             android.shortcut.conversation, and can be specified using android:name
             like so: -->
        <!-- <categories android:name="android.shortcut.conversation"/> -->

    </shortcut>

    <shortcut
        android:enabled="true"
        android:iconTint="#FF2B68"
        android:icon="@drawable/ic_sblogs"
        android:shortcutId="shortcut_mainblog"
        android:shortcutShortLabel="@string/short_shortcut4"
        android:shortcutLongLabel="@string/long_shortcut4"
        tools:targetApi="n_mr1">
        <!-- Each one of these intents needs an android:action, even if you don't
             do anything with it. Otherwise you're in for a crash! -->
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.dewonderstruck.apps.ashx0.ui.blog.list.BlogListActivity"
            android:targetPackage="com.dewonderstruck.apps.ashx0"/>


    </shortcut>

</shortcuts>