<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loadingMore"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomboxlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popularButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:background="@android:color/background_light"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/popular__m_mun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentButton" />

        <Button
            android:id="@+id/recentButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:drawablePadding="10dp"
            android:text="@string/recent__m_mun"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <Button
            android:id="@+id/lowestButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:text="@string/low_price__m_mun"
            android:paddingLeft="10dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularButton" />

        <Button
            android:id="@+id/highestButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/header_grad"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/high_price__m_mun"
            android:textColor="#ffffff"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lowestButton" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/dialog__title_m_mun"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:background="@drawable/header_grad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>